faculty honored and academies updates

--- a/src/assets/html-faculty-national-academies.html
+++ b/src/assets/html-faculty-national-academies.html
@@ -157,7 +157,7 @@
         <!-- END OF CARD P-->
 
         <div class="card">
-            <div class="frame"><img class="card-pic" src="/img/PATEL-emeritus.jpg" alt="UCLA academy Patel"></div>
+            <div class="frame"><img class="card-pic" src="/img/pottie.jpg" alt="UCLA academy Greg Pottie"></div>
             <div class="prof-title"> Professor</div>
             <div class="prof-name">Greg Pottie</div>
             <ul class="card-bottom">
