--- a/src/assets/html-faculty-recent-honored.html
+++ b/src/assets/html-faculty-recent-honored.html
@@ -1,22 +1,25 @@
 <div class="grid-cards">
-    <h3 class="page-title">National Academy of Inventors</h3>
-<div class="page-text">
-        <p>The <span>National Academy of Inventors </span>was founded in 2010 to recognize and encourage inventors with patents issued from the U.S. Patent and Trademark Office, enhance the visibility of academic technology and innovation, encourage the disclosure of intellectual property, educate and mentor innovative students, and translate the inventions of its members to benefit society. National Academy of Inventors is a US non-profit organization dedicated to encouraging inventors in academia, following the model of the National Academies of the United States. The NAI Senior Member program is an exclusive award distinction reserved for NAI Member Institutions like University of California, Los Angeles. NAI Senior Members are active faculty, scientists and administrators with success in patents, licensing and commercialization and have produced technologies that have brought, or aspire to bring, real impact on the welfare of society. Senior Members also foster a spirit of innovation within their communities through enhancing an inventive atmosphere at their institutions, while educating and mentoring the next generation of inventors.
-        </p>
+    <h3 class="page-title">American Physical Society </h3>
+    <div class="page-text">
+        <p  style="text-indent:0">Professor Mona Jarrahi has been named a fellow of the American Physical Society. The fellowship program recognizes researchers who have made significant contributions in the application of physics to science and technology, as well as advances in physics through original publication.</p><p> The nonprofit organization recently announced its 2022 fellows and selected Jarrahi for her “pioneering research, development, and commercialization of plasmonic terahertz optoelectronics, enabling high-sensitivity, high-throughput terahertz sensing, and imaging systems.”</p><p> Jarrahi holds the Northrop Grumman Endowed Chair in Electrical and Computer Engineering and has received many awards, including the 2021 Institution of Engineering and Technology (IET) A F Harvey Engineering Research Prize and the 2016 Moore Inventor Fellowship. She is also a fellow of Optical Society (OPTICA), Institute of Electrical and Electronics Engineers (IEEE), Institute of Physics (IOP), and the International Society for Optical Engineering (SPIE).</p><p> A member of the California NanoSystems Institute at UCLA, professor Mona Jarrahi leads theTerahertz Electronics Laboratory, which focuses on new materials and device concepts to improve the performance of terahertz and millimeter-wave devices.</p>
     </div>
     <div class="card-deck">
-          <div class="card">
-            <div class="frame"><img class="card-pic" src="/img/space-telescope.jpg" alt="UCLA ECE Faculty NAI"></div>
-            <div class="prof-title">Distinguished Chancellor\'s Professor</div>
-            <div class="prof-title">Chair Engineering</div>
-            <div class="prof-name">Jason</div>
+        <div class="card">
+            <div class="frame"><img class="card-pic" src="/img/Mona-Jarrahi.jpg" alt="UCLA ECE Faculty Mona Jaharri"></div>
+            <div class="prof-title">Professor</div>
+            <div class="prof-name">Mona Jaharri</div>
             <ul class="card-bottom">
-                <li>Fellow of National Academy of Inventors, 2022.</li>
+                <li>American Physical Society (APS), 2022</li>
+                <li>Institution of Engineering and Technology (IET) A F Harvey Engineering Research Prize, 2021.</li>
+                <li>Institute of Physics (IOP), 2020</li>
+                <li>Institute of Electrical and Electronics Engineers (IEEE), 2019</li>
+                <li>International Society for Optical Engineering (SPIE), 2018</li>
+                <li> </li>
                 <li>Research:
                     <ul>
-                        <li>Electronic design automation</li>
-                        <li>Energy-efficient computing</li>
-                        <li>Highly-scalable algorithms</li>
+                        <li>Terahertz/millimeter-wave electronics and optoelectronics</li>
+                        <li>Microwave photonics</li>
+                        <li>Imaging and spectroscopy systems</li>
                     </ul>
                 </li>
                 <li> </li>
@@ -24,128 +27,55 @@
         </div>
         <!-- END OF CARD -->
 
-        <div class="card">
-            <img class="logo-pic" src="/img/nai-seal.png" alt=" NAI logo">
-            <div class="prof-title">Other ECE Faculty</div>
-            <div class="prof-name">Members of NAI</div>
-            <ul class="card-bottom">
-                <li>Bahram Jalali, Senior Member 2020.</li>
-                <li>Jason Cong, Senior Member 2020.</li>
-                <li>Rob Candler, Senior Member 2018.</li>
-                <li>M.C. Frank Chang, Fellow 2015.</li>
-                <li>Aydogan Ozcan, Fellow 2018.</li>
-                <li>Sam Emaminejad, Senior Member 2019.</li>
-                <li>Dan Goebel, Fellow 2016.</li>
-                <li>Achuta Kadambi, Senior Member 2019.</li>
-                <li>Asad M. Madni, Fellow 2014.</li>
-                <li>C. Kumar Patel, Fellow 2012.</li>
-                <li>Gregory Pottie, Senior Member 2017.</li>
-                <li>Subramanian S. Iyer, Fellow 2017.</li>
-                <li>Henry Samueli, Fellow, 2017.</li>
-                <li>Gabor Temes, Fellow, 2019.</li>
-                <li>Alan Willson Jr., Fellow 2017.</li>
-                <li>Chee Wei Wong, Fellow 2019.</li>
-                <li>Eli Yablonovitch, Fellow 2017.</li>
-            </ul>
-        </div>        <!-- END OF CARD -->
     </div>    <!-- END OF CARD DECK -->
 
     <div class="spacer"><img src="/img/pixel.png"></div>
 
 
 
-    <h3 class="page-title">Institute of Electrical and Electronics Engineers (IEEE)</h3>
+    <h3 class="page-title">National Academy of Engineering</h3>
     <div class="page-text">
-        <p>The <span>Institute of Electrical and Electronics Engineers (IEEE) </span>  is a professional association for electronic engineering and electrical engineering (and associated disciplines) was formed in 1963 from the amalgamation of the American Institute of Electrical Engineers (founded in 1884) and the Institute of Radio Engineers  (founded in 1912). As of 2018, it is the world\'s largest association of technical professionals with more than 423,000 members in over 160 countries around the world. Its objectives are the educational and technical advancement of electrical and electronic engineering, telecommunications, computer engineering and similar disciplines.</p>
+        <p style="text-indent:0">Founded in 1964, the <span> National Academy of Engineering </span> is a private, independent, nonprofit institution. It is part of the National Academies of Sciences, Engineering, and Medicine, with more than 2,000 peer-elected members and international members, comprising senior professionals in business, academia and government who are among the world’s most accomplished engineers. Professor Jalali was elected “for contributions to silicon photonics, high time-resolution scientific instruments, and biomedical imaging.”</p><p>38 affiliated Samueli School of Engineering faculty are members of the National Academy of Engineering.</p>
     </div>
-
-    <h3 class="page-title">IEEE Fellows Recently Elected</h3>
 
     <div class="card-deck">
         <div class="card">
             <div class="frame">
-                <img class="card-pic" src="/img/Cabric.jpg" alt="UCLA ECE Faculty Danijela Cabric IEEE">
+                <img class="card-pic" src="/img/Jalali_NAE.png" alt="UCLA ECE Faculty B Jalali">
             </div>
-            <div class="prof-title">Professor</div>
-            <div class="prof-name"> Danijela Cabric</div>
+            <div class="prof-title">Distinguished Professor Emeritus</div>
+            <div class="prof-name"> Bahram Jalali</div>
             <ul class="card-bottom">
-                <li>IEEE Fellow 2021.</li>
-                <li>Qualcomm Faculty Award 2020. </li>
-                <li>NSF Career Award 2012.</li>
-                <li>Hellman Felllow 2012.</li>
-                <li>Okawa Foundation Award 2009.</li>
+                <li>NAE Fellow, 2022.</li>
+                <li>National Academy of Inventors, 2020. </li>
+                <li>Society of Photo-Optical Instrumentation Engineers, 2013.</li>
+                <li>American Physical Society, 2011.</li>
+                <li>Optical Society of America, 2004.</li>
+                <li>IEEE Fellow, 2003.</li>
                 <li> </li>
             </ul>
         </div><!-- END OF CARD -->
-        <div class="card">
-            <div class="frame">
-                <img class="card-pic" src="/img/markovic5.jpg" alt="UCLA ECE Faculty Dejan Markovic">
-            </div>
-            <div class="prof-title">Professor</div>
-            <div class="prof-name"> Dejan Markovic</div>
-            <ul class="card-bottom">
-                <li>IEEE Fellow 2021.</li>
-                <li>ISSCC Lewis Award for Outstanding Paper 2014.</li>
-                <li>Associate Editor, IEEE Journal of Solid-State Circuits 2011.</li>
-                <li>NSF CAREER Award 2009.</li>
-                <li> </li>
-            </ul>
-        </div><!-- END OF CARD -->
+
     </div><!-- END OF CARD DECK -->
     <div class="spacer"><img src="/img/pixel.png"></div>
 
-    <h3 class="page-title">Henry Samueli Receives 2021 IEEE Founders Medal</h3>
+
+
+    <h3 class="page-title">American Institute for Medical and Biological Engineering</h3>
     <div class="page-text">
-        <img class="logo-pic" src="/2021-2022/img/samueli_IEEEmedal.jpg" alt="UCLA ECE Henry Samueli IEEE Founders Medal">
+        <p  style="text-indent:0"> The <span>American Institute for Medical and Biological Engineering (AIMBE) </span> has announced the election of Dejan Markovic to its College of Fellows. Dr. Markovic was nominated, reviewed, and elected by peers and members of the AIMBE College of Fellows for outstanding contributions to neurotechnology for clinical and translational neuroscience.</p><p> The College of Fellows is comprised of the top two percent of medical and biological engineers in the country — the most accomplished and distinguished engineering and medical school chairs, research directors, professors, innovators, and successful entrepreneurs. <span>www.aimbe.org </span></p>
 
-        <p>The Institute of Electrical and Electronics Engineers has chosen Henry Samueli as the recipient of the 2021 IEEE Founders Medal. The namesake of UCLA Samueli School of Engineering and chair of the board of Broadcom Inc., Samueli is also a triple Bruin and an electrical and computer engineering professor at UCLA. Samueli joins a list of engineering luminaries and electronics industry titans who have received the IEEE Founders Medal. Previous recipients include David Sarnoff, the longtime leader of the Radio Corporation of America; HP founders William Hewlett and David Packard; electronics and defense industry executive Simon Ramo; Intel co-founder Gordon Moore; and nanotechnology pioneer Mildred Dresselhaus.</p>
-
-        <p>Samueli earned his bachelor’s, master’s and doctoral degrees from the UCLA School of Engineering. In 1991, while still teaching at UCLA, he co-founded Broadcom Corporation with one of his Ph.D. students, Henry Nicholas. The company became a global leader in providing semiconductor technologies and infrastructure software for wired and wireless communications. In addition to his many professional achievements, Samueli is also a prominent philanthropist. Both the engineering schools at UCLA and UC Irvine are named in Samueli’s honor. In 2019, Samueli and his wife Susan gave $100 million to UCLA through the Samueli Foundation as part of the university’s Centennial Campaign to support the growth of UCLA Engineering.</p>
-
-        <p>Samueli has received numerous international honors for his contributions to communications technology, including the Global Semiconductor Alliance Dr. Morris Chang Exemplary Leadership Award and the Marconi Society Prize and Fellowship. He is a member of the National Academy of Engineering, and a fellow of IEEE, the National Academy of Inventors and the American Academy of Arts and Sciences.</p>
-
-        <h4 class="caption">IEEE Founders Medal courtesy of IEEE.</h4>
-    </div><!-- END OF page-TEXT-->
-    <div class="card-deck">
-        <div class="card">
-            <img class="logo-pic" src="/2021-2022/img/samueli_IEEEmedal.jpg" alt="UCLA ECE Henry Samueli IEEE Founders Medal">
-
-            <div class="prof-title">Professor</div>
-            <div class="prof-name">Henry Samueli</div>
-            <ul class="card-bottom">
-                <li>Marconi Prize, 2012, 2017.</li>
-                <li>National Academy of Inventors Fellow 2017.</li>
-                <li>American Academy of Arts and Sciences Fellow 2004.</li>
-                <li>National Academy of Engineering Fellow 2003.</li>
-                <li>He is co-founder of Broadcom and ­recipient of the UCLA Medal, 2010.</li>
-                <li></li>
-            </ul>
-        </div>        <!-- END OF CARD -->
-     </div><!-- END OF card-deck -->
-
-    <div class="spacer"><img src="/img/pixel.png"></div>
-
-
-    <h3 class="page-title">National Institute of Health</h3>
-    <div class="page-text">
-        <h2>Jonathan Kao awarded NIH innovative grant to develop AI-driven Brain-Machine Interface</h2>
-        <p>The <span> National Institute of Health (NIH)</span> awarded assistant professor Jonathan Kao a Director\’s New Innovator Award. Established by NIH in 2007, the New Innovator Award supports unusually innovative research from early career investigators who are within 10 years of receiving their final degree  nd have not previously received a research project grant or equivalent NIH grant. The award includes a five-year, $2.34 million grant to support Kao’s research on accelerating the development of technologies for brain-machine interfaces, which could help people who are paralyzed regain a sense of control and independence.</p>
-
-        <p>More than five million people in the U.S. live with some form of paralysis. Brain-machine interfaces (BMIs) aim to restore their ability to communicate with the world by translating the brain’s neural signals into actions. BMIs decode these signals into the movements of a computer cursor on a screen or a robotic arm, allowing the user to interact with the world autonomously. Research on BMIs has been conducted for two decades, but the systems have not been widely adopted because BMIs have not achieved levels of performance that justify their costs and risks. Professor Kao aims to develop a next generation of what he calls AI-BMIs, which will harness artificial intelligence to greatly enhance their performance. This novel AI would work cooperatively with the user, predicting intended movements and helping to complete them. </p>
-
-        <p>Professor Kao joined UCLA Samueli in 2017, where he directs the <span>Neural Computation and Engineering Laboratory.</span> He is also a faculty member in the UCLA Neuroscience Interdepartmental Program at the David Geffen School of Medicine.  In September, Kao received a CAREER Award from the National Science Foundation, with $575,000 to support his research. He also received a Brain & Behavior Research Foundation Young Investigator Grant and a Hellman Fellowship.</p>
     </div>
     <div class="card-deck">
         <div class="card">
-            <img class="logo-pic " src="/2021-2022/img/Jonathan_Kao.jpg" alt="UCLA ECE Faculty Jonathan Kao">
+            <img class="logo-pic " src="/img/markovic5.jpg" alt="UCLA ECE Faculty Dejan Markovic">
 
-            <div class="prof-title">Assistant Professor</div>
-            <div class="prof-name">Jonathan Kao</div>
+            <div class="prof-title"> Professor</div>
+            <div class="prof-name">Dejan Markovic</div>
             <ul class="card-bottom">
-                <li>NIH Director's New Innovator Award 2020</li>
-                <li>NSF CAREER Award 2020</li>
-                <li>Brain & Behavior Research Foundation Young Investigator Grant 2020</li>
-                <li>Hellman Fellowship 2019</li>
+                <li>AIMBE, 2022.</li>
+                <li>IEEE Fellow, 2021.</li>
+                <li>NSF Career Award, 2009.</li>
                 <li></li>
             </ul>
         </div>        <!-- END OF CARD -->
