updaded Dept overview

--- a/src/assets/html-Overview.html
+++ b/src/assets/html-Overview.html
@@ -418,112 +418,55 @@ https://nanolab.ucla.edu/ -->
                     <tbody>
                         <tr>
                             <td>Department Fellowships</td>
-                            <td class="right">$1,472,945</td>
-                        </tr>
-                        <tr>
-                            <td>Non-resident Tuition for Teaching Assistants</td>
-                            <td class="right">$286,938</td>
+                            <td class="right">$1,601,388</td>
                         </tr>
                         <tr>
                             <td>Faculty Unrestricted Fellowships</td>
-                            <td class="right">$220,071</td>
-                        </tr>
-                        <tr>
-                            <td>Dean\'s GSR Support</td>
-                            <td class="right">$52,909</td>
-                        </tr>
-                        <tr>
-                            <td>Qualcomm Fellowship</td>
-                            <td class="right">$7,430</td>
+                            <td class="right">$435,404</td>
                         </tr>
                         <tr>
                             <td>Samueli Fellowship</td>
-                            <td class="right">$29,133</td>
+                            <td class="right">$364,064</td>
                         </tr>
                         <tr>
-                            <td>Graduate Opportunity Fellowship</td>
-                            <td class="right">$74,704</td>
+                            <td>Guru Krupa Fellowship</td>
+                            <td class="right">$352,698</td>
                         </tr>
-                        <!-- <tr>
-                            <td>Broadcom Fellowship</td>
-                            <td class="right">$65,902</td>
-                        </tr> -->
+                        <tr>
+                            <td>Non-Resident Tuition for Teaching Assistants</td>
+                            <td class="right">$286,938</td>
+                        </tr>
                         <tr>
                             <td>Dissertation Year Fellowship</td>
                             <td class="right">$187,435</td>
                         </tr>
-                        <!-- <tr>
-                            <td>Kalosworks</td>
-                            <td class="right">$47,606</td>
-                        </tr> -->
-                        <!-- <tr>
-                            <td>Ph.D. Preliminary Exam Top Score Fellowships</td>
-                            <td class="right">$47,507</td>
-                        </tr> -->
                         <tr>
-                            <td>Guru Krupa Fellowship</td>
-                            <td class="right">$57,786</td>
+                            <td>Eugene Cota Robles Fellowship</td>
+                            <td class="right">$170,147</td>
+                        </tr>
+                        <tr>
+                            <td>Graduate Dean\'s Scholar Award</td>
+                            <td class="right">$100,000</td>
+                        </tr>
+                        <tr>
+                            <td>Graduate Opportunity Fellowship</td>
+                            <td class="right">$75,133</td>
                         </tr>
                         <tr>
                             <td>NASA (FINESST) Fellowship</td>
                             <td class="right">$45,000</td>
                         </tr>
-                        <!-- <tr>
-                            <td>IBM</td>
-                            <td class="right">$43,750</td>
-                        </tr> -->
                         <tr>
-                            <td>Eugene Cota Robles Fellowship</td>
-                            <td class="right">$100,276</td>
+                            <td>Dean\'s GSR Support</td>
+                            <td class="right">$34,117</td>
                         </tr>
                         <tr>
                             <td>Dean\'s Fellowship & Camp Funds</td>
                             <td class="right">$29,000</td>
                         </tr>
-                        <tr>
-                            <td>Mediatek</td>
-                            <td class="right">$50,757</td>
-                        </tr>
-                        <tr>
-                            <td>Big Bang Theory Fellowship</td>
-                            <td class="right">$20,000</td>
-                        </tr>
-
-                        <!-- <tr>
-                            <td>Graduate Opportunity Fellowship</td>
-                            <td class="right">$36,899</td>
-                        </tr> -->
-                        <tr>
-                            <td>Graduate Dean\'s Scholar Award</td>
-                            <td class="right">$41,000</td>
-                        </tr>
-                        <!-- <tr>
-                            <td>HRL Fellowship</td>
-                            <td class="right">$24,914</td>
-                        </tr> -->
-                        <!-- <tr>
-                            <td>Northrop Grumman</td>
-                            <td class="right">$20,630</td>
-                        </tr> -->
-                        <!-- <tr>
-                            <td>Raytheon</td>
-                            <td class="right">$16,889</td>
-                        </tr> -->
-                        <!-- <tr>
-                            <td>Living Spring Fellowship</td>
-                            <td class="right">$14,156</td>
-                        </tr> -->
-                        <!-- <tr>
-                            <td>Hellman Fellowship</td>
-                            <td class="right">$14,030</td>
-                        </tr> -->
-                        <!-- <tr>
-                            <td>Werner R. Scott Fellowship</td>
-                            <td class="right">$9,300</td>
-                        </tr> -->
                         <tr class="t-total">
                             <td>TOTAL:</td>
-                            <td class="right">$2,675,384</td>
+                            <td class="right">$3,681,324</td>
                         </tr>
                     </tbody>
                     <tfoot>
@@ -664,7 +607,7 @@ https://nanolab.ucla.edu/ -->
                         <td>1650</td>
                         <td>207</td>
                         <td>339</td>
-                        <td>3637</td>
+                        <td>3,637</td>
                     </tr>
                     <tr>
                         <td>Admitted</td>
@@ -685,18 +628,17 @@ https://nanolab.ucla.edu/ -->
                     <tr>
                         <td>New Students</td>
                         <td>16</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>8</td>
                         <td>67</td>
-                        <td>176</td>
+                        <td>175</td>
                     </tr>
                     <tr class="t-total">
-                        <td colspan="2">Total Enrollment</td>
-
+                        <td colspan="2"></td>
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td>476</td>
+                        <td></td>
                     </tr>
 
                 </tbody>
@@ -730,21 +672,21 @@ https://nanolab.ucla.edu/ -->
                     </tr>
                     <tr>
                         <td>Applicants</td>
-                        <td>1322</td>
-                        <td>527</td>
-                        <td>1849</td>
+                        <td>1199</td>
+                        <td>534</td>
+                        <td>1733</td>
                     </tr>
                     <tr>
                         <td>Admitted</td>
-                        <td>512</td>
-                        <td>63</td>
-                        <td>575</td>
+                        <td>412</td>
+                        <td>72</td>
+                        <td>484</td>
                     </tr>
                     <tr>
                         <td>Intent to Register</td>
-                        <td>114</td>
-                        <td>30</td>
-                        <td>144</td>
+                        <td>244</td>
+                        <td>48</td>
+                        <td>292</td>
                     </tr>
                     <tr>
                         <td>New Students</td>
@@ -754,9 +696,9 @@ https://nanolab.ucla.edu/ -->
                     </tr>
                     <tr class="t-total">
                         <td>Total Enrollment</td>
-                        <td>238</td>
-                        <td>242</td>
-                        <td>480</td>
+                        <td>206</td>
+                        <td>41</td>
+                        <td>247</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -793,24 +735,24 @@ https://nanolab.ucla.edu/ -->
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Summer 2020</td>
-                        <td>7</td>
+                        <td>Summer 2021</td>
+                        <td>4</td>
                     </tr>
                     <tr>
-                        <td>Fall 2020</td>
-                        <td>13</td>
+                        <td>Fall 2021</td>
+                        <td>14</td>
                     </tr>
                     <tr>
-                        <td>Winter 2021</td>
-                        <td>22</td>
+                        <td>Winter 2022</td>
+                        <td>18</td>
                     </tr>
                     <tr>
-                        <td>Spring 2021</td>
-                        <td>130</td>
+                        <td>Spring 2022</td>
+                        <td>133</td>
                     </tr>
                     <tr class="t-total">
                         <td>Total:</td>
-                        <td>172</td>
+                        <td>169</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -832,24 +774,24 @@ https://nanolab.ucla.edu/ -->
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Summer 2020</td>
+                        <td>Summer 2021</td>
                         <td>5</td>
                     </tr>
                     <tr>
-                        <td>Fall 2020</td>
-                        <td>50</td>
+                        <td>Fall 2021</td>
+                        <td>30</td>
                     </tr>
                     <tr>
-                        <td>Winter 2021</td>
-                        <td>45</td>
+                        <td>Winter 2022</td>
+                        <td>31</td>
                     </tr>
                     <tr>
-                        <td>Spring 2021</td>
-                        <td>63</td>
+                        <td>Spring 2022</td>
+                        <td>53</td>
                     </tr>
                     <tr class="t-total">
                         <td>Total:</td>
-                        <td>163</td>
+                        <td>119</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -871,24 +813,24 @@ https://nanolab.ucla.edu/ -->
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Summer 2020</td>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <td>Fall 2020</td>
+                        <td>Summer 2021</td>
                         <td>-</td>
                     </tr>
                     <tr>
-                        <td>Winter 2021</td>
+                        <td>Fall 2021</td>
                         <td>-</td>
                     </tr>
                     <tr>
-                        <td>Spring 2021</td>
+                        <td>Winter 2022</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Spring 2022</td>
                         <td>-</td>
                     </tr>
                     <tr class="t-total">
                         <td>Total:</td>
-                        <td>1</td>
+                        <td>-</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -910,24 +852,24 @@ https://nanolab.ucla.edu/ -->
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Summer 2020</td>
+                        <td>Summer 2021</td>
                         <td>5</td>
                     </tr>
                     <tr>
-                        <td>Fall 2020</td>
+                        <td>Fall 2021</td>
                         <td>13</td>
                     </tr>
                     <tr>
-                        <td>Winter 2021</td>
-                        <td>4</td>
+                        <td>Winter 2022</td>
+                        <td>13</td>
                     </tr>
                     <tr>
-                        <td>Spring 2021</td>
-                        <td>13</td>
+                        <td>Spring 2022</td>
+                        <td>14</td>
                     </tr>
                     <tr class="t-total">
                         <td>Total:</td>
-                        <td>34</td>
+                        <td>45</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -963,36 +905,36 @@ https://nanolab.ucla.edu/ -->
                 <tbody>
                     <tr>
                         <td>USA</td>
-                        <td>246</td>
+                        <td>296</td>
                     </tr>
                     <tr>
                         <td>China</td>
-                        <td>967</td>
+                        <td>744</td>
                     </tr>
                     <tr>
                         <td>India</td>
-                        <td>351</td>
+                        <td>387</td>
                     </tr>
 
                     <tr>
                         <td>Taiwan</td>
-                        <td>114</td>
+                        <td>104</td>
                     </tr>
                     <tr>
                         <td>South Korea</td>
-                        <td>30</td>
+                        <td>52</td>
                     </tr>
                     <tr>
                         <td>Iran</td>
-                        <td>17</td>
+                        <td>22</td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td>Other</td>
                         <td>128</td>
-                    </tr>
+                    </tr> -->
                     <tr class="t-total">
                         <td>Total:</td>
-                        <td>1853</td>
+                        <td>1605</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -1018,19 +960,19 @@ https://nanolab.ucla.edu/ -->
                     </tr>
                     <tr>
                         <td>Admitted</td>
-                        <td>198</td>
+                        <td>148</td>
                     </tr>
                     <tr>
                         <td>Rejected</td>
-                        <td>447</td>
+                        <td>495</td>
                     </tr>
                     <tr>
                         <td>Admission Rate</td>
-                        <td>29%</td>
+                        <td>23%</td>
                     </tr>
                     <tr class="sub-total">
                         <td>Total Applicants</td>
-                        <td>675</td>
+                        <td>646</td>
                     </tr>
                     <tr class="sub-head">
                         <td>Physical and Wave Electronics</td>
@@ -1038,31 +980,11 @@ https://nanolab.ucla.edu/ -->
                     </tr>
                     <tr>
                         <td>Admitted</td>
-                        <td>91</td>
+                        <td>48</td>
                     </tr>
                     <tr>
                         <td>Rejected</td>
-                        <td>214</td>
-                    </tr>
-                    <tr>
-                        <td>Admission Rate</td>
-                        <td>30%</td>
-                    </tr>
-                    <tr class="sub-total">
-                        <td>Total Applicants</td>
-                        <td>305</td>
-                    </tr>
-                    <tr class="sub-head">
-                        <td>Signals and Systems</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Admitted</td>
-                        <td>216</td>
-                    </tr>
-                    <tr>
-                        <td>Rejected</td>
-                        <td>657</td>
+                        <td>156</td>
                     </tr>
                     <tr>
                         <td>Admission Rate</td>
@@ -1070,11 +992,31 @@ https://nanolab.ucla.edu/ -->
                     </tr>
                     <tr class="sub-total">
                         <td>Total Applicants</td>
-                        <td>873</td>
+                        <td>205</td>
+                    </tr>
+                    <tr class="sub-head">
+                        <td>Signals and Systems</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Admitted</td>
+                        <td>154</td>
+                    </tr>
+                    <tr>
+                        <td>Rejected</td>
+                        <td>582</td>
+                    </tr>
+                    <tr>
+                        <td>Admission Rate</td>
+                        <td>21%</td>
+                    </tr>
+                    <tr class="sub-total">
+                        <td>Total Applicants</td>
+                        <td>736</td>
                     </tr>
                     <tr class="t-total">
-                        <td>Total Applicants for Fall 2020</td>
-                        <td>1853</td>
+                        <td>Total Applicants for Fall 2021</td>
+                        <td>1733</td>
                     </tr>
                 </tbody>
                 <tfoot>
