changs to prof Madni page and academies

--- a/src/assets/html-faculty-national-academies.html
+++ b/src/assets/html-faculty-national-academies.html
@@ -100,9 +100,10 @@
             <div class="prof-title">Distinguished</br> Adj. Professor</div>
             <div class="prof-name">­ Asad M. Madni</div>
             <ul class="card-bottom">
-                <li>National Academy of Engineering, 2011.</li>
-                <li>National Academy of Inventors, 2015.</li>
-                <li>Former President, COO and CTO of BEI Technologies Inc. He is a Fellow of the NAI, IEEE, IEE, IET, AAAS, NYAS, SAE, IAE, AIAA, RAeS and AIMBE.</li>
+                <li>Canadian Academy of Engineering, 2021.</li>
+                <li>Royal Academy of Engineering 2020.</li>
+                <li>National Academy of Engineering 2011. For contributions to development and commercialization of sensors and systems for aerospace and automotive safety.</li>
+                <li>Former President, COO and CTO of BEI Technologies Inc. He is a Fellow of the IEEE, IET, AAAS, NYAS, WAS, SAE, IAE, AIAA, RAeS, AIMBE and AAIA.</li>
                 <li></li>
             </ul>
         </div>
